Avoid cropping title

--- a/js/_head.scss
+++ b/js/_head.scss
@@ -9,7 +9,8 @@ header {
   /*height:1.4em;*/
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 200;
+  display: table;
   width: 100%;
   margin: 0;
   //@include transition (top, 0.5s, ease);
@@ -19,11 +20,11 @@ header {
     background-image: linear-gradient(to right, $headerBackColor 0%, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0.5) 100%);
     font-family: inherit;
     box-sizing: border-box;
-    max-height: $headerHeight;
-    min-height: $headerHeight;
-    line-height: $headerHeight;
+    height: $headerHeight;
+    line-height: 100%;
+    display: table-cell;
+    vertical-align: middle;
     letter-spacing: 1px;
-    @include ellipsis;
     color: #666666;
     margin: 0;
     padding-left: 0.8em;
@@ -54,13 +55,14 @@ h2 {
   font-weight: normal;
   margin-top: 1.5em;
   margin-right: 0;
-  margin-left: -0.85em;
+  margin-left: -$textMargin;
   margin-bottom: 0;
   color: #666666;
   @include gradientFromLeft;
   padding-top: 0.35em;
   padding-bottom: 0.4em;
-  padding-left: 5vw;
+
+  padding-left: $textMargin;
   letter-spacing: 1px;
   width: 50%;
 }
@@ -70,13 +72,12 @@ h3 {
   background: transparent;
   font-size: 1.2em;
   font-weight: normal;
-  text-indent: $textMargin;
   margin-top: 1.25em;
   margin-left: -$textMargin;
   color: #666666;
   letter-spacing: 1px;
-  padding: 5px;
   border-bottom: thin dotted #DBDBDB;
+  text-align: left;
 }
 
 h4 {
